--- a/index.html
+++ b/index.html
@@ -2,10 +2,40 @@
 <html>
 <head>
     <title>Battle Ship</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/skeleton/2.0.4/skeleton.css">
     <link rel="stylesheet" href="style/style.css">
     <script type="text/javascript" src="app.js"></script>
 </head>
 <body>
-
+  <div id="scoreboard">
+        <label for="battleShipInput">Where will you anchor your battle ship?</label>
+        <input class="u-full-width" type="password" placeholder="a1" id="battleShipInput">
+        <input type="submit" value="submit input" id="submit-button">
+  </div>
+<div class="board">
+  <div id="row1">
+    <div class="row">
+      <div class="one columns">One</div>
+      <div class="two columns">Two</div>
+      <div class="three columns">Three</div>
+    </div>
+  </div>
+  <div id="row2">
+    <div class="row" id="row2">
+      <div class="one columns">One</div>
+      <div class="two columns">Two</div>
+      <div class="three columns">Three</div>
+    </div>
+  </div>
+  <div id="row3">
+    <div class="row">
+      <div class="one columns">One</div>
+      <div class="two columns">Two</div>
+      <div class="three columns">Three</div>
+    </div>
+  </div>
+</div>
+<script src='https://code.jquery.com/jquery-2.2.2.min.js'></script>
+<script src="http://code.jquery.com/jquery-2.2.2.min.js"></script>
 </body>
 </html>
