--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
         <label for="battleShipInput">Where will you anchor your battle ship?</label>
         <input class="u-full-width" type="password" placeholder="a1" id="battleShipInput">
         <input type="submit" value="submit input" id="submit-button">
+
+        <label for="fireTorpedo">Where has the other captain hidden the battle ship?</label>
+        <input class="u-full-width" type="text" placeholder="a1" id="fireTorpedo">
+        <input type="submit" value="submit input" id="guess-button">
   </div>
 <div class="board">
   <div id="row1">
