adds resetGame and updateBrowser text

--- a/index.html
+++ b/index.html
@@ -8,36 +8,47 @@
 </head>
 <body>
   <div id="scoreboard">
+    <div class="hide">
         <label for="battleShipInput">Where will you anchor your battle ship?</label>
         <input class="u-full-width" type="password" placeholder="a1" id="battleShipInput">
         <input type="submit" value="submit input" id="submit-button">
-
+    </div>
+    <div id="return-text">Captain 1. You're in dangerous waters. Hide your battle ship!</div>
+      <div id ="new game">
+        <input type="submit" value="new game" id="reset-button">
+      </div>
+    <div class="guess">
         <label for="fireTorpedo">Where has the other captain hidden the battle ship?</label>
         <input class="u-full-width" type="text" placeholder="a1" id="fireTorpedo">
         <input type="submit" value="submit input" id="guess-button">
+    </div>
   </div>
 <div class="board">
-  <div id="row1">
-    <div class="row">
+    <div class="row" id="row1">
       <div class="one columns">One</div>
       <div class="two columns">Two</div>
       <div class="three columns">Three</div>
+      <div class="four columns">Four</div>
+      <div class="five columns">five</div>
+      <div class="six columns">six</div>
     </div>
-  </div>
-  <div id="row2">
     <div class="row" id="row2">
       <div class="one columns">One</div>
       <div class="two columns">Two</div>
       <div class="three columns">Three</div>
+      <div class="four columns">Four</div>
+      <div class="five columns">five</div>
+      <div class="six columns">six</div>
     </div>
-  </div>
-  <div id="row3">
-    <div class="row">
+    <div class="row" id="row3">
       <div class="one columns">One</div>
       <div class="two columns">Two</div>
       <div class="three columns">Three</div>
+      <div class="four columns">Four</div>
+      <div class="five columns">five</div>
+      <div class="six columns">six</div>
     </div>
-  </div>
+
 </div>
 <script src='https://code.jquery.com/jquery-2.2.2.min.js'></script>
 <script src="http://code.jquery.com/jquery-2.2.2.min.js"></script>
