adds columns 7 and 8

--- a/index.html
+++ b/index.html
@@ -13,10 +13,12 @@
         <input class="u-full-width" type="password" placeholder="a1" id="battleShipInput">
         <input type="submit" value="submit input" id="submit-button">
     </div>
-    <div id="return-text">Captain 1. You're in dangerous waters. Hide your battle ship!</div>
-      <div id ="new game">
-        <input type="submit" value="new game" id="reset-button">
-      </div>
+    <div id="return-text">
+        <p>Captain 1. You're in dangerous waters. Hide your battle ship!</p>
+        <div id ="new game">
+          <input type="submit" value="new game" id="reset-button">
+        </div>
+    </div>
     <div class="guess">
         <label for="fireTorpedo">Where has the other captain hidden the battle ship?</label>
         <input class="u-full-width" type="text" placeholder="a1" id="fireTorpedo">
@@ -31,6 +33,8 @@
       <div class="four columns">Four</div>
       <div class="five columns">five</div>
       <div class="six columns">six</div>
+      <div class="seven columns">seven</div>
+      <div class="eight columns">eight</div>
     </div>
     <div class="row" id="row2">
       <div class="one columns">One</div>
@@ -39,6 +43,8 @@
       <div class="four columns">Four</div>
       <div class="five columns">five</div>
       <div class="six columns">six</div>
+      <div class="seven columns">seven</div>
+      <div class="eight columns">eight</div>
     </div>
     <div class="row" id="row3">
       <div class="one columns">One</div>
@@ -47,6 +53,8 @@
       <div class="four columns">Four</div>
       <div class="five columns">five</div>
       <div class="six columns">six</div>
+      <div class="seven columns">seven</div>
+      <div class="eight columns">eight</div>
     </div>
 
 </div>
