--- a/index.html
+++ b/index.html
@@ -13,12 +13,11 @@
         <input class="u-full-width" type="password" placeholder="a1" id="battleShipInput">
         <input type="submit" value="submit input" id="submit-button">
     </div>
-    <div id="return-text">
-        <p>Captain 1. You're in dangerous waters. Hide your battle ship!</p>
-        <div id ="new game">
-          <input type="submit" value="new game" id="reset-button">
-        </div>
+    <div id="return-text">Captain 1. You're in dangerous waters. Hide your battle ship!</div>
+    <div id ="new game">
+        <input type="submit" value="new game" id="reset-button">
     </div>
+
     <div class="guess">
         <label for="fireTorpedo">Where has the other captain hidden the battle ship?</label>
         <input class="u-full-width" type="text" placeholder="a1" id="fireTorpedo">
