--- a/index.html
+++ b/index.html
@@ -9,55 +9,72 @@
 <body>
   <div id="scoreboard">
     <div class="hide">
-        <label for="battleShipInput">Where will you anchor your battle ship?</label>
+        <label for="battleShipInput">Captain 1</label>
         <input class="u-full-width" type="password" placeholder="a1" id="battleShipInput">
         <input type="submit" value="submit input" id="submit-button">
     </div>
-    <div id="return-text">Captain 1. You're in dangerous waters. Hide your battle ship!</div>
-    <div id ="new game">
+    <div class="newGame">
+        <div id="return-text"><strong>Captain 1</strong>. You're in dangerous waters. Hide your battle ship!</div><br>
         <input type="submit" value="new game" id="reset-button">
     </div>
-
     <div class="guess">
-        <label for="fireTorpedo">Where has the other captain hidden the battle ship?</label>
+        <label for="fireTorpedo">Captain 2</label>
         <input class="u-full-width" type="text" placeholder="a1" id="fireTorpedo">
         <input type="submit" value="submit input" id="guess-button">
     </div>
   </div>
 <div class="board">
+    <div class="row" id="rowh">
+      <div class="one columns">number</div>
+      <div class="two columns">a</div>
+      <div class="three columns">b</div>
+      <div class="four columns">c</div>
+      <div class="five columns">d</div>
+      <div class="six columns">e</div>
+      <div class="seven columns">f</div>
+      <div class="eight columns">g</div>
+    </div>
     <div class="row" id="row1">
-      <div class="one columns">One</div>
-      <div class="two columns">Two</div>
-      <div class="three columns">Three</div>
-      <div class="four columns">Four</div>
-      <div class="five columns">five</div>
-      <div class="six columns">six</div>
-      <div class="seven columns">seven</div>
-      <div class="eight columns">eight</div>
+      <div class="one columns">1</div>
+      <div class="two columns">a</div>
+      <div class="three columns">b</div>
+      <div class="four columns">c</div>
+      <div class="five columns">d</div>
+      <div class="six columns">e</div>
+      <div class="seven columns">f</div>
+      <div class="eight columns">g</div>
     </div>
     <div class="row" id="row2">
-      <div class="one columns">One</div>
-      <div class="two columns">Two</div>
-      <div class="three columns">Three</div>
-      <div class="four columns">Four</div>
-      <div class="five columns">five</div>
-      <div class="six columns">six</div>
-      <div class="seven columns">seven</div>
-      <div class="eight columns">eight</div>
+      <div class="one columns">2</div>
+      <div class="two columns">a</div>
+      <div class="three columns">b</div>
+      <div class="four columns">c</div>
+      <div class="five columns">d</div>
+      <div class="six columns">e</div>
+      <div class="seven columns">f</div>
+      <div class="eight columns">g</div>
     </div>
     <div class="row" id="row3">
-      <div class="one columns">One</div>
-      <div class="two columns">Two</div>
-      <div class="three columns">Three</div>
-      <div class="four columns">Four</div>
-      <div class="five columns">five</div>
-      <div class="six columns">six</div>
-      <div class="seven columns">seven</div>
-      <div class="eight columns">eight</div>
+      <div class="one columns">3</div>
+      <div class="two columns">a</div>
+      <div class="three columns">b</div>
+      <div class="four columns">c</div>
+      <div class="five columns">d</div>
+      <div class="six columns">e</div>
+      <div class="seven columns">f</div>
+      <div class="eight columns">g</div>
     </div>
-
+    <div class="row" id="row4">
+      <div class="one columns">4</div>
+      <div class="two columns">a</div>
+      <div class="three columns">b</div>
+      <div class="four columns">c</div>
+      <div class="five columns">d</div>
+      <div class="six columns">e</div>
+      <div class="seven columns">f</div>
+      <div class="eight columns">g</div>
+    </div>
 </div>
 <script src='https://code.jquery.com/jquery-2.2.2.min.js'></script>
-<script src="http://code.jquery.com/jquery-2.2.2.min.js"></script>
 </body>
 </html>
